site title update

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         href="/site.webmanifest">
   <meta name="viewport"
         content="width=device-width, initial-scale=1.0" />
-  <title data-default>Vite + React + TS</title>
+  <title data-default>Amigos</title>
 </head>
 
 <body>
